--- a/core3/model-impl/trunk/it/pom.xml
+++ b/core3/model-impl/trunk/it/pom.xml
@@ -20,12 +20,6 @@
 
 	<packaging>jar</packaging>
 
-	<scm>
-		<connection>scm:svn:http://chianti.ucsd.edu/svn/core3/model-impl/trunk</connection>
-		<developerConnection>scm:svn:svn+ssh://grenache.ucsd.edu/cellar/common/svn/core3/model-impl/trunk</developerConnection>
-		<url>http://chianti.ucsd.edu/svn/core3/model-impl/trunk</url>
-	</scm>
-
 	<build>
 		<plugins>
 			<plugin>
@@ -58,50 +52,15 @@
 		</plugins>
 	</build>
 
-	<repositories>
-		<!-- bootstrap for cytoscape dependencies, namely the parent POM snapshots -->
-		<repository>
-			<id>cytoscape_snapshots</id>
-			<snapshots>
-				<enabled>true</enabled>
-			</snapshots>
-			<releases>
-				<enabled>false</enabled>
-			</releases>
-			<name>Cytoscape Snapshots</name>
-			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/snapshots/</url>
-		</repository>
-		<!-- bootstrap for cytoscape dependencies, namely the parent POM releases -->
-		<repository>
-			<id>cytoscape_releases</id>
-			<snapshots>
-				<enabled>false</enabled>
-			</snapshots>
-			<releases>
-				<enabled>true</enabled>
-			</releases>
-			<name>Cytoscape Releases</name>
-			<url>http://cytoscape.wodaklab.org/nexus/content/repositories/releases/</url>
-		</repository>
-	</repositories>
-
+	<!--
+	This is where any additional implementation dependencies necessary for
+	running the integration tests should reside, NOT in the top level pom.xml.
+	-->
 	<dependencies>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
-			<artifactId>model-api</artifactId>
-			<version>3.0.0-alpha2-SNAPSHOT</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.cytoscape</groupId>
 			<artifactId>model-impl</artifactId>
-			<version>3.0.0-alpha2-SNAPSHOT</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>org.cytoscape</groupId>
-			<artifactId>event-api</artifactId>
-			<version>3.0.0-alpha2-SNAPSHOT</version>
+			<version>${version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
@@ -114,12 +73,6 @@
 			<groupId>org.cytoscape</groupId>
 			<artifactId>integration-test-support</artifactId>
 			<version>3.0.0-alpha3-SNAPSHOT</version>
-			<scope>test</scope>
-		</dependency>
-		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>${junit.version}</version>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
