--- a/core3/model-impl/trunk/it/pom.xml
+++ b/core3/model-impl/trunk/it/pom.xml
@@ -29,19 +29,17 @@
 					<execution>
 						<id>generate-config</id>
 						<goals>
-							<goal>generate-depends-file</goal>
+							<goal>generate-config</goal>
 						</goals>
 					</execution>
 				</executions>
-		<!--
 				<configuration>
 					<options>
 						<platform>felix</platform>
 						<profiles>spring.dm</profiles>
 					</options>
 				</configuration>
-		-->
-	</plugin>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -61,37 +59,34 @@
 			<groupId>org.cytoscape</groupId>
 			<artifactId>model-impl</artifactId>
 			<version>${version}</version>
-			<scope>test</scope>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>event-impl</artifactId>
 			<version>3.0.0-alpha2-SNAPSHOT</version>
-			<scope>test</scope>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>integration-test-support</artifactId>
 			<version>3.0.0-alpha3-SNAPSHOT</version>
-			<scope>test</scope>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.ops4j.pax.exam</groupId>
 			<artifactId>pax-exam</artifactId>
-			<version>1.2.0</version>
-			<scope>test</scope>
+			<version>${pax.exam.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.ops4j.pax.exam</groupId>
 			<artifactId>pax-exam-junit</artifactId>
-			<version>1.2.0</version>
-			<scope>test</scope>
+			<version>${pax.exam.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.ops4j.pax.exam</groupId>
 			<artifactId>pax-exam-container-default</artifactId>
-			<version>1.2.0</version>
-			<scope>test</scope>
+			<version>${pax.exam.version}</version>
 		</dependency>
 	</dependencies>
 </project>
