integration tests now configured through maven
git-svn-id: http://chianti.ucsd.edu/svn@22939 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/event-impl/trunk/pom.xml
+++ b/core3/event-impl/trunk/pom.xml
@@ -58,6 +58,7 @@
 			<groupId>org.cytoscape</groupId>
 			<artifactId>event-api</artifactId>
 			<version>3.0.0-alpha2-SNAPSHOT</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.osgi</groupId>
