--- a/core3/event-impl/trunk/it/pom.xml
+++ b/core3/event-impl/trunk/it/pom.xml
@@ -29,19 +29,17 @@
 					<execution>
 						<id>generate-config</id>
 						<goals>
-							<goal>generate-depends-file</goal>
+							<goal>generate-config</goal>
 						</goals>
 					</execution>
 				</executions>
-		<!--
 				<configuration>
 					<options>
 						<platform>felix</platform>
 						<profiles>spring.dm</profiles>
 					</options>
 				</configuration>
-		-->
-	</plugin>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -61,13 +59,13 @@
 			<groupId>org.cytoscape</groupId>
 			<artifactId>event-impl</artifactId>
 			<version>${version}</version>
-			<scope>test</scope>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>integration-test-support</artifactId>
 			<version>3.0.0-alpha3-SNAPSHOT</version>
-			<scope>test</scope>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.ops4j.pax.exam</groupId>
