--- a/core3/viewmodel-impl/trunk/it/pom.xml
+++ b/core3/viewmodel-impl/trunk/it/pom.xml
@@ -29,19 +29,17 @@
 					<execution>
 						<id>generate-config</id>
 						<goals>
-							<goal>generate-depends-file</goal>
+							<goal>generate-config</goal>
 						</goals>
 					</execution>
 				</executions>
-		<!--
 				<configuration>
 					<options>
 						<platform>felix</platform>
 						<profiles>spring.dm</profiles>
 					</options>
 				</configuration>
-		-->
-	</plugin>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
