--- a/core3/vizmap-impl/trunk/it/pom.xml
+++ b/core3/vizmap-impl/trunk/it/pom.xml
@@ -29,19 +29,17 @@
 					<execution>
 						<id>generate-config</id>
 						<goals>
-							<goal>generate-depends-file</goal>
+							<goal>generate-config</goal>
 						</goals>
 					</execution>
 				</executions>
-		<!--
 				<configuration>
 					<options>
 						<platform>felix</platform>
 						<profiles>spring.dm</profiles>
 					</options>
 				</configuration>
-		-->
-	</plugin>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -61,6 +59,7 @@
 			<groupId>org.cytoscape</groupId>
 			<artifactId>vizmap-impl</artifactId>
 			<version>${version}</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
@@ -88,13 +87,19 @@
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
+			<artifactId>event-api</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
 			<artifactId>integration-test-support</artifactId>
 			<version>3.0.0-alpha3-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
-			<artifactId>viewmodel-impl</artifactId>
+			<artifactId>service-util</artifactId>
 			<version>3.0.0-alpha1</version>
 			<scope>provided</scope>
 		</dependency>
