--- a/core3/work-swing-impl/trunk/pom.xml
+++ b/core3/work-swing-impl/trunk/pom.xml
@@ -59,6 +59,7 @@
 			<groupId>org.cytoscape</groupId>
 			<artifactId>work-api</artifactId>
 			<version>3.0.0-alpha1</version>
+			<scope>provided</scope>
 		</dependency>
 		<dependency>
 			<groupId>org.cytoscape</groupId>
