--- a/core3/ding-presentation-impl/trunk/pom.xml
+++ b/core3/ding-presentation-impl/trunk/pom.xml
@@ -164,8 +164,8 @@
 			<version>7.3</version>
 		</dependency>
 		<dependency>
-			<groupId>phoebe</groupId>
-			<artifactId>phoebe.dnd</artifactId>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>dnd-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 		
