--- a/core3/editor-impl/trunk/pom.xml
+++ b/core3/editor-impl/trunk/pom.xml
@@ -125,6 +125,11 @@
 			<artifactId>dnd-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>swing-application-api</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 
 	</dependencies>
 </project>
