--- a/core3/session-api/trunk/pom.xml
+++ b/core3/session-api/trunk/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<artifactId>parent</artifactId>
 		<groupId>org.cytoscape</groupId>
-		<version>3.0.0-alpha3</version>
+		<version>3.0.0-alpha4-SNAPSHOT</version>
 	</parent>
 
 	<properties>
@@ -124,7 +124,7 @@
 		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>property-api</artifactId>
-			<version>3.0.0-alpha1</version>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
 		
 		<!-- for testing -->
