renamed bundle to log-swing-impl
git-svn-id: http://chianti.ucsd.edu/svn@23001 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/log-swing-impl/trunk/pom.xml
+++ b/core3/log-swing-impl/trunk/pom.xml
@@ -10,15 +10,13 @@
 	</parent>
 
 	<properties>
-		<bundle.symbolicName>org.cytoscape.log-swing
-		</bundle.symbolicName>
-		<bundle.namespace>org.cytoscape.log
-		</bundle.namespace>
+		<bundle.symbolicName>org.cytoscape.log-swing-impl</bundle.symbolicName>
+		<bundle.namespace>org.cytoscape.log</bundle.namespace>
 	</properties>
 
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.cytoscape</groupId>
-	<artifactId>log-swing</artifactId>
+	<artifactId>log-swing-impl</artifactId>
 	<version>1.0-SNAPSHOT</version>
 
 	<name>${bundle.symbolicName} [${bundle.namespace}]</name>
