fixed a jaxb classloading issue
git-svn-id: http://chianti.ucsd.edu/svn@23006 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/io-impl/trunk/pom.xml
+++ b/core3/io-impl/trunk/pom.xml
@@ -83,7 +83,11 @@
 			<artifactId>io-api</artifactId>
 			<version>3.0.0-alpha2-SNAPSHOT</version>
 		</dependency>
-		
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>property-api</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
+		</dependency>
 		<dependency>
 			<groupId>com.lowagie.text</groupId>
 			<artifactId>com.springsource.com.lowagie.text</artifactId>
