Temporarily commented out dependency on table-browser-impl.
git-svn-id: http://chianti.ucsd.edu/svn@23016 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape3/trunk/provision/pom.xml
+++ b/cytoscape3/trunk/provision/pom.xml
@@ -338,11 +338,12 @@
 		</dependency>
 
 		<!-- Attribute Browser -->
-		<dependency>
+<!--		<dependency>
 			<groupId>org.cytoscape</groupId>
 			<artifactId>table-browser-impl</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+-->
 
 		<!-- cytoscape layouts -->
 <!--
