Added attribute support to model-impl.
git-svn-id: http://chianti.ucsd.edu/svn@23039 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape3/trunk/provision/pom.xml
+++ b/cytoscape3/trunk/provision/pom.xml
@@ -266,6 +266,16 @@
 			<artifactId>equations-api</artifactId>
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>equations-impl</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>topo-sort</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
 		
 		<!--<dependency>
 			<groupId>org.cytoscape</groupId>
