Completed adding of attribute equation support to model-impl.
git-svn-id: http://chianti.ucsd.edu/svn@23040 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/topo-sort/trunk/pom.xml
+++ b/core3/topo-sort/trunk/pom.xml
@@ -8,13 +8,13 @@
   </parent>
 
   <properties>
-    <bundle.symbolicName>org.cytoscape.misc-util</bundle.symbolicName>
-    <bundle.namespace>org.cytoscape.util</bundle.namespace>
+    <bundle.symbolicName>org.cytoscape.topo-sort</bundle.symbolicName>
+    <bundle.namespace>org.cytoscape.util.tsort</bundle.namespace>
   </properties>
 
   <modelVersion>4.0.0</modelVersion>
   <groupId>org.cytoscape</groupId>
-  <artifactId>misc-util</artifactId>
+  <artifactId>topo-sort</artifactId>
   <version>1.0-SNAPSHOT</version>
 
   <name>${bundle.symbolicName}</name>
