More accurate dependency specifiction.
git-svn-id: http://chianti.ucsd.edu/svn@23045 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/model-impl/trunk/it/pom.xml
+++ b/core3/model-impl/trunk/it/pom.xml
@@ -88,5 +88,11 @@
 			<artifactId>pax-exam-container-default</artifactId>
 			<version>${pax.exam.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>equations-impl</artifactId>
+			<version>1.0-SNAPSHOT</version>
+			<scope>provided</scope>
+		</dependency>
 	</dependencies>
 </project>
