Added edge style fields to demo app.
git-svn-id: http://chianti.ucsd.edu/svn@23046 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscapeweb/trunk/website/build.xml
+++ b/cytoscapeweb/trunk/website/build.xml
@@ -77,7 +77,7 @@
         
         <mkdir dir="${api.dir}/elements"/>
         <copy todir="${api.dir}/elements" overwrite="true">
-            <fileset dir="${temp.dir}/symbols" includes="**.Edge.php **.Node.php **.Group.php"/>
+            <fileset dir="${temp.dir}/symbols" includes="**.NetworkModel.php **.Edge.php **.Node.php **.Group.php"/>
         </copy>
         
         <mkdir dir="${api.dir}/events"/>
