--- a/csplugins/trunk/soc/jgao/IDMapping/build.xml
+++ b/csplugins/trunk/soc/jgao/IDMapping/build.xml
@@ -50,7 +50,7 @@
 	</fail>	
     <mkdir dir="${build}"/>
     <mkdir dir="${build.classes}"/>
-    <javac srcdir="${src}" destdir="${build.classes}">
+    <javac target="1.5" srcdir="${src}" destdir="${build.classes}">
       <classpath refid="classpath"/>
     </javac>
   </target>
