Fixed all compiler errors
git-svn-id: http://chianti.ucsd.edu/svn@23162 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/network-analyzer-impl/trunk/pom.xml
+++ b/core3/network-analyzer-impl/trunk/pom.xml
@@ -137,7 +137,11 @@
             <artifactId>l2fprod-common-shared</artifactId>
             <version>7.3</version>
         </dependency>
-		
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>io-api</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
+		</dependency>		
 	</dependencies>
 
 </project>
