Updated bundle version for event-api.
git-svn-id: http://chianti.ucsd.edu/svn@23192 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/test-support/trunk/pom.xml
+++ b/core3/test-support/trunk/pom.xml
@@ -31,14 +31,14 @@
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>event-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha2-SNAPSHOT</version>
       <type>test-jar</type>
     </dependency>
     <!-- the APIs we're supporting - these should remain relatively static -->
     <dependency>
       <groupId>org.cytoscape</groupId>
       <artifactId>event-api</artifactId>
-      <version>1.0-SNAPSHOT</version>
+      <version>3.0.0-alpha2-SNAPSHOT</version>
     </dependency>
     <dependency>
       <groupId>org.cytoscape</groupId>
