Registered both BookmarkReader and PropsReader as SessionLoadedListener, so they can update their properties from loaded CySessions.
git-svn-id: http://chianti.ucsd.edu/svn@23199 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/property-impl/trunk/pom.xml
+++ b/core3/property-impl/trunk/pom.xml
@@ -66,6 +66,11 @@
 			<version>3.0.0-alpha1</version>
 		</dependency>
 		<dependency>
+            <groupId>org.cytoscape</groupId>
+            <artifactId>session-api</artifactId>
+            <version>3.0.0-alpha2-SNAPSHOT</version>
+        </dependency>
+		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
