Make sure to add Cytoscape-Plugin to Manifest
git-svn-id: http://chianti.ucsd.edu/svn@23206 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsf/scooter/nodeCharts/pom.xml
+++ b/csplugins/trunk/ucsf/scooter/nodeCharts/pom.xml
@@ -60,6 +60,17 @@
 	  <plugin>
         <artifactId>maven-assembly-plugin</artifactId> 
 	  </plugin>
+	  <plugin>
+      <groupId>org.apache.maven.plugins</groupId>
+      <artifactId>maven-jar-plugin</artifactId> 
+			<configuration>
+				<archive>
+					<manifestEntries>
+						<Cytoscape-Plugin>nodeCharts.NodeCharts</Cytoscape-Plugin>
+					</manifestEntries>
+				</archive>
+			</configuration>
+	  </plugin>
     <plugin>
       <groupId>org.apache.maven.plugins</groupId>
       <artifactId>maven-compiler-plugin</artifactId>
