Move this to Communication/Scripting in our next update
git-svn-id: http://chianti.ucsd.edu/svn@23255 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/csplugins/trunk/ucsf/scooter/commandTool/resources/plugin.props
+++ b/csplugins/trunk/ucsf/scooter/commandTool/resources/plugin.props
@@ -19,7 +19,7 @@ pluginVersion=0.91
 cytoscapeVersion=2.8
 
 # Category, use one of the categories listed on the website or create your own
-pluginCategory=Other
+pluginCategory=Communication/Scripting
 
 # -- The following properties are OPTIONAL -- #
 
