added network analyzer to provision pom
git-svn-id: http://chianti.ucsd.edu/svn@23289 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/cytoscape3/trunk/provision/pom.xml
+++ b/cytoscape3/trunk/provision/pom.xml
@@ -400,6 +400,13 @@
 			<version>1.0-SNAPSHOT</version>
 		</dependency>
 
+		<!-- network analyzer -->
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>network-analyzer-impl</artifactId>
+			<version>1.0-SNAPSHOT</version>
+		</dependency>
+
 		<!-- Required by plugin manager -->
 		<dependency>
 			<groupId>org.cytoscape.wrappers</groupId>
