1st draft of web service API bundle.
git-svn-id: http://chianti.ucsd.edu/svn@23363 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/webservice-api/trunk/pom.xml
+++ b/core3/webservice-api/trunk/pom.xml
@@ -96,6 +96,11 @@
 	<dependencies>
 
 		<!-- Cytoscape modules -->
+		<dependency>
+			<groupId>org.cytoscape</groupId>
+			<artifactId>model-api</artifactId>
+			<version>3.0.0-alpha2-SNAPSHOT</version>
+		</dependency>
 
 
 		<!-- Testing -->
