Fixed issues with dependencies Upversioned to use model-api-3.0.0-alpha3-SNAPSHOT Wired up more event handlers
git-svn-id: http://chianti.ucsd.edu/svn@23367 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/filter-impl/trunk/pom.xml
+++ b/core3/filter-impl/trunk/pom.xml
@@ -23,7 +23,7 @@
         <dependency>
             <groupId>org.cytoscape</groupId>
             <artifactId>model-api</artifactId>
-            <version>3.0.0-alpha1</version>
+            <version>3.0.0-alpha2-SNAPSHOT</version>
         </dependency>
 
 		<dependency>
@@ -50,27 +50,23 @@
         	<groupId>org.cytoscape</groupId>
         	<artifactId>session-api</artifactId>
         	<version>3.0.0-alpha2-SNAPSHOT</version>
-        	<type>bundle</type>
         	<scope>compile</scope>
         </dependency>
         <dependency>
         	<groupId>org.cytoscape</groupId>
         	<artifactId>viewmodel-api</artifactId>
         	<version>3.0.0-alpha3-SNAPSHOT</version>
-        	<type>bundle</type>
         	<scope>compile</scope>
         </dependency>
         <dependency>
         	<groupId>cytoscape-temp</groupId>
         	<artifactId>violinstrings</artifactId>
         	<version>1.0.2</version>
-        	<type>bundle</type>
         </dependency>
         <dependency>
         	<groupId>org.cytoscape</groupId>
         	<artifactId>work-api</artifactId>
         	<version>3.0.0-alpha2-SNAPSHOT</version>
-        	<type>bundle</type>
         	<scope>compile</scope>
         </dependency>
         <dependency>
