Biomart client GUI shows up, but there are still tons of timing issues.  GUI components are frozen in many cases when using Tasks.
git-svn-id: http://chianti.ucsd.edu/svn@23435 0ecc0d97-ab19-0410-9704-bfe1a75892f5

--- a/core3/webservice-api/trunk/pom.xml
+++ b/core3/webservice-api/trunk/pom.xml
@@ -10,8 +10,8 @@
 	</parent>
 
 	<properties>
-		<bundle.symbolicName>org.cytoscape.webservice-api</bundle.symbolicName>
-		<bundle.namespace>org.cytoscape.webservice</bundle.namespace>
+		<bundle.symbolicName>org.cytoscape.io.webservice-api</bundle.symbolicName>
+		<bundle.namespace>org.cytoscape.io.webservice</bundle.namespace>
 	</properties>
 
 	<modelVersion>4.0.0</modelVersion>
